[package]
name = "moon_lander"
version = "0.1.0"
authors = ["Adrien Chardon <adrienchardon@mailoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
pyo3 = { version = "0.13", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
